--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #f9f9f9;
+  background-color: #fffaff; /* white */
   user-select: none;
   font-family: "Helvetica", "Arial", sans-serif;
 }
